--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
