--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait">
@@ -18,19 +17,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.activity.DashBoardActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".ui.activity.RegistroActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.RecuperAcessoActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.BrejaActivity"></activity>
     </application>
 
 </manifest>
