--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    compile 'com.android.support:multidex:1.0.0'
+
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:support-v4:23.3.0'
@@ -66,4 +69,6 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+
+    compile 'com.android.support:palette-v7:23.3.0'
 }
