--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,32 +1,29 @@
 apply plugin: 'com.android.application'
 
+def versionMajor = 1
+def versionMinor = 1
+def versionPatch = 1
+def versionBuild = 0
+
+def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone("UTC"))
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
-
-    signingConfigs {
-        dev {
-            keyAlias 'brewjas'
-            keyPassword '123456'
-            storeFile file('brewjas_dev.jks')
-            storePassword '123456'
-        }
-    }
 
     defaultConfig {
         applicationId "br.com.brewjas"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-        multiDexEnabled true
-        signingConfig signingConfigs.dev
+        versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles 'proguard-rules.pro'
         }
     }
 
@@ -36,14 +33,12 @@ android {
             applicationId "br.com.brewjas"
             versionName '1.0-DEV'
             manifestPlaceholders = [applicationLabel: "brewjas-DEV"]
-            signingConfig = signingConfigs.dev
         }
         Producao {
             buildConfigField "String", "REST_SERVICE_URL", "\"http://www.tutorpro.com.br/SmartPromos\""
             applicationId "br.com.brewjas"
             versionName '1.0'
             manifestPlaceholders = [applicationLabel: "brewjas"]
-            signingConfig = signingConfigs.dev
         }
     }
 
@@ -53,8 +48,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-
-    compile 'com.android.support:multidex:1.0.0'
 
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:appcompat-v7:23.3.0'
@@ -69,5 +62,6 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 
 }
