--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
         <activity
-            android:name=".ui.view.activity.RegistroActivity"
+            android:name=".ui.view.activity.RegisterActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.view.activity.BrejaActivity"></activity>
     </application>
