--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,10 @@
             android:screenOrientation="portrait" />
         <activity android:name=".ui.view.activity.BrejaActivity"
             android:screenOrientation="portrait" ></activity>
-        <activity android:name=".ui.view.activity.ContaActivity"
-            android:screenOrientation="portrait" ></activity>
+        <activity
+            android:name=".ui.view.activity.ContaActivity"
+            android:screenOrientation="portrait"
+            android:noHistory="true"></activity>
     </application>
 
 </manifest>
